css added and html run

--- a/index.html
+++ b/index.html
@@ -2,11 +2,43 @@
 <html lang="en-us"
 <head>  
 <meta chartset="UTF-8">
+<link href="'css/styles.css" rel="stylesheet"
 <title>My first page</title>
 </head>
-
 <body>
-<h1>My first page</h1>
-<p>This change has been made on my computer</p>
+<header>
+<h1>My website</h1>
+<h2>Best coder on the web</h2>
+</header>
+
+<nav>
+<ul>
+<li><a href="index">Home</a>
+<li><a href="#">Agenda</a></li> 
+<li><a href="#">Schedule</a></li> 
+
+</li>
+
+</ul>
+
+</nav>
+
+<main>
+<h1>Home</h1>
+<img src="images/web.jpg" alt="photo of car">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan, magna a tempus sollicitudin, libero sapien vehicula dolor, vitae aliquet quam tellus ut mauris. Proin accumsan lacus vitae est facilisis tincidunt. Ut scelerisque rutrum arcu dignissim iaculis. Proin faucibus massa leo, vitae porta velit mattis sed. Ut sollicitudin placerat massa et molestie. Cras at dui consectetur, feugiat risus et, accumsan sem. Donec ut elit lorem.</p>
+<ol>
+<li>Bootstrap</li>
+<li>Materialise</li>
+<li>Foundation</li>
+</ol>
+
+</main>
+
+<footer>
+&copy; Joe Minett 2022
+
+</footer>
+
 </body>
 </html>
